--- a/templates/v1/nav/head.html
+++ b/templates/v1/nav/head.html
@@ -37,5 +37,7 @@
 		<!--====== Responsive css ======-->
 		<link rel="stylesheet" href="{% static 'assets/css/responsive.css' %}">
 
+		<link rel ="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
 
 	</head>
