--- a/templates/v1/nav/nav.html
+++ b/templates/v1/nav/nav.html
@@ -6,7 +6,7 @@
 				<div class="row">
 					<div class="col-lg-12">
 						<nav class="navbar navbar-expand-lg">
-							<a class="navbar-brand" href="index.html">
+							<a class="navbar-brand" href="{% url 'home' %}">
 								<img src="{% static 'logo.png '%}" alt="Logo">
 							</a> <!-- Logo -->
 							<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -18,7 +18,7 @@
 							<div class="collapse navbar-collapse" id="navbarSupportedContent">
 								<ul id="nav" class="navbar-nav ml-auto">
 									<li class="nav-item active">
-										<a data-scroll-nav="0" href="#home">Home</a>
+										<a data-scroll-nav="0" href="#home"> <i class="fa fa-home"></i> Home</a>
 									</li>
 									<li class="nav-item">
 										<a data-scroll-nav="0" href="#product">Products</a>
@@ -27,7 +27,27 @@
 										<a data-scroll-nav="0" href="#blog">Blog</a>
 									</li>
 									<li class="nav-item">
-										<a data-scroll-nav="0" href="#contact">Contact</a>
+										<a data-scroll-nav="0" href="#contact"> Contact</a>
+									</li>
+									<li class="nav-item">
+										 {% if user.is_authenticated %}
+										<div class="dropdown">
+										  <a class="dropdown-toggle"  id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+											<i class="fa fa-user"></i> {{user.username|capfirst }}
+										  </a>
+										  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+											<a class="dropdown-item" href="#">Profile</a>
+											<a class="dropdown-item" href="#">Settings</a>
+											<a class="dropdown-item" href="#">Logout</a>
+										  </div>
+										</div>
+
+
+
+
+										 {% else %}
+											<a data-scroll-nav="0" href="{% url 'login' %}"><i class="fa fa-users"></i> Login</a>
+										{% endif %}
 									</li>
 								</ul> <!-- navbar nav -->
 							</div>
