Screen Shot added

--- a/templates/v1/nav/foot.html
+++ b/templates/v1/nav/foot.html
@@ -5,7 +5,7 @@
 			<div class="container">
 				<div class="footer-widget pt-75 pb-120">
 					<div class="row">
-						<div class="col-lg-3 col-md-5 col-sm-7">
+						<div class="col-lg-4 col-md-4 col-sm-7">
 							<div class="footer-logo mt-40">
 								<a href="#">
 									<img src="{% static 'logo.png '%}"  alt="Logo">
@@ -18,31 +18,8 @@
 								</ul>
 							</div> <!-- footer logo -->
 						</div>
-						<div class="col-lg-3 col-md-4 col-sm-5">
-							<div class="footer-link mt-50">
-								<h5 class="f-title">Services</h5>
-								<ul>
-									<li><a href="#">Architechture Design</a></li>
-									<li><a href="#">Interior Design</a></li>
-									<li><a href="#">Autocad Services</a></li>
-									<li><a href="#">Lighting Design</a></li>
-									<li><a href="#">Poster Design</a></li>
-								</ul>
-							</div> <!-- footer link -->
-						</div>
-						<div class="col-lg-2 col-md-3 col-sm-5">
-							<div class="footer-link mt-50">
-								<h5 class="f-title">Help</h5>
-								<ul>
-									<li><a href="#">Forum</a></li>
-									<li><a href="#">Blog</a></li>
-									<li><a href="#">Help Center</a></li>
-									<li><a href="#">Contact Us</a></li>
-									<li><a href="#">Privacy Policy</a></li>
-								</ul>
-							</div> <!-- footer link -->
-						</div>
-						<div class="col-lg-4 col-md-5 col-sm-7">
+
+						<div class="col-lg-8 col-md-8 col-sm-7 float-right">
 							<div class="footer-info mt-50">
 								<h5 class="f-title">Contact Info</h5>
 								<ul>
