--- a/templates/v1/nav/nav.html
+++ b/templates/v1/nav/nav.html
@@ -31,16 +31,16 @@
 									</li>
 									<li class="nav-item">
 										 {% if user.is_authenticated %}
-										<div class="dropdown">
-										  <a class="dropdown-toggle"  id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-											<i class="fa fa-user"></i> {{user.username|capfirst }}
-										  </a>
-										  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-											<a class="dropdown-item" href="#">Profile</a>
-											<a class="dropdown-item" href="#">Settings</a>
-											<a class="dropdown-item" href="#">Logout</a>
-										  </div>
-										</div>
+											<div class="dropdown">
+											  <a class="dropdown-toggle"  id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+												<i class="fa fa-user"></i> {{user.username|capfirst }}
+											  </a>
+											  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+												<a class="dropdown-item" href="#"><i class="fa fa-edit"></i> Profile</a>
+												<a class="dropdown-item" href="#"><i class="fa fa-cog"></i> Settings</a>
+												<a class="dropdown-item" href="{% url 'logout' %}"><i class="fa fa-sign-out"></i> Logout</a>
+											  </div>
+											</div>
 
 
 
