Init Order Product rating

--- a/templates/v1/index.html
+++ b/templates/v1/index.html
@@ -85,9 +85,9 @@
 											  </div>
 											</div></a>
 										  <div class="card-body text-center">
-											<h4 class="card-title">{{product.name}}</h4>
+											<a href="#" class="card-title"><h4 >{{product.name}}</h4></a>
 											<p class="text-muted">
-												<del style="color:red">₹{{product.cost_price}}</del> ₹{{product.sell_price}}
+												<del style="color:red">₹{{product.mrp}}</del> ₹{{product.sell_price}}
 											 </p>
 										  	<a class="btn btn-outline-primary btn-sm" href="#" data-abc="true">View</a>
 										  	<a class="btn btn-outline-primary btn-sm" href="#" data-abc="true"><i class="fa fa-shopping-cart" aria-hidden="true"></i> Add to cart</a>
