--- a/templates/v1/nav/head.html
+++ b/templates/v1/nav/head.html
@@ -8,7 +8,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 		<!--====== Title ======-->
-		<title>Furnish - Furniture and Decor Website Template</title>
+		<title>{{title}}</title>
 
 		<!--====== Favicon Icon ======-->
 		<link rel="shortcut icon" href="{% static 'assets/images/favicon.png' %}" type="image/png">
