Api View Set added

--- a/templates/v1/dynamic_page.html
+++ b/templates/v1/dynamic_page.html
@@ -2,7 +2,9 @@
 {% load static %}
 {% block content %}
  <section class="discount-product pt-150">
-        <p>{{ content|safe }}</p>
+       <div class="container">
+            {{ content|safe }}
+       </div>
  </section>
 
 
