--- a/templates/v1/nav/head.html
+++ b/templates/v1/nav/head.html
@@ -9,7 +9,7 @@
 
 		<!--====== Title ======-->
 		<title>{{title}}</title>
-
+		{{meta_tag |safe }}
 		<!--====== Favicon Icon ======-->
 		<link rel="shortcut icon" href="{% static 'assets/images/favicon.png' %}" type="image/png">
 
