--- a/templates/v1/base.html
+++ b/templates/v1/base.html
@@ -46,7 +46,8 @@
 
 		<!--====== jquery js ======-->
 		<script src="{% static 'assets/js/vendor/modernizr-3.6.0.min.js' %}"></script>
-		<script src="{% static 'assets/js/vendor/jquery-1.12.4.min.js' %}"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
 
 		<!--====== Bootstrap js ======-->
 		<script src="{% static 'assets/js/bootstrap.min.js' %}"></script>
@@ -67,7 +68,13 @@
 
 		<!--====== Main js ======-->
 		<script src="{% static 'assets/js/main.js' %}"></script>
+<script>
+    var pathurl = "{% url 'home' %}";
+</script>
+		<!--====== Main js ======-->
+		<script src="{% static 'assets/js/cart.js' %}"></script>
 
 	</body>
 
 </html>
+
